Switch from QMake to CMake

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,16 @@ Thumbs.db
 *.dll
 *.exe
 
+
+#CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
