--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
- find_package(Qt5 COMPONENTS Core Qml Widgets Quick QuickControls2 REQUIRED)
+ find_package(Qt5 COMPONENTS Core Qml Widgets Quick QuickControls2 Sql REQUIRED)
  
  find_package(KF5Declarative REQUIRED)
  find_package(KF5Crash REQUIRED)
@@ -23,6 +23,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
  
  set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Werror")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -flto")
+ 
+ include_directories(feedsource feedstorage src)
 
+ add_subdirectory(feedsource)
+ add_subdirectory(feedstorage)
  add_subdirectory(src)
 
