move FeedRef to it's own header for compilation speed

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -3,6 +3,7 @@ set(feedcore_HEADERS
     feeditemheaders.h
     feeditemstatus.h
     feed.h
+    feedref.h
     storeditem.h
     feedstorage.h
     feeddatabase.h
