--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set(feedkeeper_HEADERS
     allitemmodel.h
     feeditemmodel.h
     managedlistmodel.h
-    feedrefwrapper.h
+    qmlfeedref.h
     )
 
 set(feedkeeper_SRCS
@@ -14,7 +14,6 @@ set(feedkeeper_SRCS
     allitemmodel.cpp
     feeditemmodel.cpp
     managedlistmodel.cpp
-    feedrefwrapper.cpp
     main.cpp
     resources.qrc
     )
