Support android build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,18 +17,28 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(ECM CONFIG REQUIRED)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 include(ECMInstallIcons)
+include(KDEInstallDirs)
+include(KDECMakeSettings)
 
  find_package(Qt5 COMPONENTS Core Qml Network Widgets Quick QuickControls2 Sql REQUIRED)
 
- find_package(KF5Declarative REQUIRED)
+ find_package(KF5Declarative CONFIG QUIET)
  find_package(KF5Syndication REQUIRED)
- find_package(KF5Notifications REQUIRED)
+ find_package(KF5Notifications CONFIG QUIET)
+
+ if (ANDROID)
+    find_package(KF5Kirigami2 REQUIRED)
+    find_package(OpenSSL)
+    find_package(Qt5 COMPONENTS Svg REQUIRED)
+endif()
 
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Werror -Wno-error=deprecated-declarations")
- set(CMAKE_CXX_FLAGS_RELEASE "-O3 -flto")
+ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
  
- include_directories(${CMAKE_SOURCE_DIR} feedcore src)
+ configure_file(cmake-config.h.template ${CMAKE_CURRENT_BINARY_DIR}/cmake-config.h)
+ include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} feedcore src)
 
+ add_subdirectory(htmlparser)
  add_subdirectory(data)
  add_subdirectory(feedcore)
  add_subdirectory(sqlite)
