--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.rocksandpaper.feedkeeper"
+          package="com.rocksandpaper.syndic"
           android:versionName="0.0.1"
           android:versionCode="1629823595"
           android:installLocation="auto">
@@ -10,10 +10,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="FeedKeeper" android:icon="@mipmap/ic_launcher">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Syndic" android:icon="@mipmap/ic_launcher">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
                   android:name="org.qtproject.qt5.android.bindings.QtActivity"
-                  android:label="FeedKeeper"
+                  android:label="Syndic"
                   android:windowSoftInputMode="adjustResize"
                   android:launchMode="singleTop">
 
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
 
-            <meta-data android:name="android.app.lib_name" android:value="feedkeeper"/>
+            <meta-data android:name="android.app.lib_name" android:value="syndic"/>
             <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
             <meta-data android:name="android.app.repository" android:value="default"/>
             <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
