--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,8 +1,8 @@
  
 set(icons 
-    icons/sc-apps-feedkeeper.svg
-    icons/sc-status-feedkeeper-feed-empty.svg)
+    icons/sc-apps-syndic.svg
+    icons/sc-status-syndic-feed-empty.svg)
 message(${icons})
 ecm_install_icons(ICONS ${icons} DESTINATION share/icons THEME hicolor)
 
-install(PROGRAMS applications/feedkeeper.desktop DESTINATION share/applications)
+install(PROGRAMS applications/com.rocksandpaper.syndic.desktop DESTINATION share/applications)
