Change icon for mark-as-read
The old icons were designed for mail clients and don't make sense for RSS feeds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -83,11 +83,10 @@ if (ANDROID)
         non-starred-symbolic
         document-preview
         view-refresh
-        mail-read-symbolic
-        mail-read
         view-filter
         document-edit
         globe
+        checkmark
         emblem-shared-symbolic
         )
 endif()
