--- a/sqlite/CMakeLists.txt
+++ b/sqlite/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2021 Connor Carney <hello@connorcarney.com>
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 set(sqlite_HEADERS
     feedquery.h
     itemquery.h
