--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.rocksandpaper.syndic"
           android:versionName="0.0.1"
-          android:versionCode="1629823595"
+          android:versionCode="1644947580"
           android:installLocation="auto">
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
@@ -15,7 +15,9 @@
                   android:name="org.qtproject.qt5.android.bindings.QtActivity"
                   android:label="Syndic"
                   android:windowSoftInputMode="adjustResize"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleTop"
+                  android:theme="@android:style/Theme.DeviceDefault.DayNight"
+                  >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
