--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.rocksandpaper.syndic"
           android:versionName="0.0.1"
-          android:versionCode="1644947580"
+          android:versionCode="1645302965"
           android:installLocation="auto">
 
     <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
@@ -12,11 +12,11 @@
 
     <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="Syndic" android:icon="@mipmap/ic_launcher">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|layoutDirection|locale|fontScale|keyboard|keyboardHidden|navigation"
-                  android:name="org.qtproject.qt5.android.bindings.QtActivity"
+                  android:name="com.rocksandpaper.syndic.SyndicActivity"
                   android:label="Syndic"
                   android:windowSoftInputMode="adjustResize"
                   android:launchMode="singleTop"
-                  android:theme="@android:style/Theme.DeviceDefault.DayNight"
+                  android:theme="@style/MainTheme"
                   >
 
             <intent-filter>
