--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 set(icons 
     icons/sc-apps-syndic.svg
-    icons/sc-status-syndic-feed-empty.svg)
+    icons/sc-status-com.rocksandpaper.syndic.feed-empty.svg)
 message(${icons})
 ecm_install_icons(ICONS ${icons} DESTINATION share/icons THEME hicolor)
 
