Update license information

--- a/androidstyleplugin/CMakeLists.txt
+++ b/androidstyleplugin/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2022 Connor Carney <hello@connorcarney.com>
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 set(androidstyleplugin_SRCS
     androidstylepluginfactory.h
