--- a/cmake-config.h.template
+++ b/cmake-config.h.template
@@ -1,3 +1,7 @@
-
+/**
+ * SPDX-FileCopyrightText: 2021 Connor Carney <hello@connorcarney.com>
+ * SPDX-License-Identifier: GPL-3.0-or-later
+ */
+ 
 #cmakedefine Qt5Widgets_FOUND
 #cmakedefine KF5DBusAddons_FOUND
