--- a/com.rocksandpaper.syndic.yml
+++ b/com.rocksandpaper.syndic.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2021 Connor Carney <hello@connorcarney.com>
+# SPDX-License-Identifier: GPL-3.0-or-later
 id: com.rocksandpaper.syndic
 runtime: org.kde.Platform
 runtime-version: '5.15-21.08'
