Limit the number of simultaneous network requests
This prevents us from flooding the link with requests when e.g. you
launch the application and refresh hundreds of feeds at once.

Fixes #40

--- a/feedcore/CMakeLists.txt
+++ b/feedcore/CMakeLists.txt
@@ -16,6 +16,7 @@ set(feedcore_HEADERS
     starreditemsfeed.h
     updatablefeed.h
     opmlreader.h
+    sharedcache.h
     )
     
 set(feedcore_SRCS
@@ -30,6 +31,7 @@ set(feedcore_SRCS
     starreditemsfeed.cpp
     updatablefeed.cpp
     opmlreader.cpp
+    sharedcache.cpp
     )
     
 add_library(feedcore STATIC ${feedcore_SRCS})
